<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2013 Maximilian Salomon.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see http://www.gnu.org/licenses/.
  -->

<resources>

    <plurals name="title_users_online">
        <item quantity="zero">No User online</item>
        <item quantity="one">&lt;b>1&lt;/b> User online</item>
        <item quantity="other">&lt;b>%d&lt;/b> Users online</item>
    </plurals>

    <string name="app_name" translatable="false">Shoutemo</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_prefs">Settings</string>
    <string name="menu_users_online">Show currently online users</string>
    <string name="sidebar_timezone">Brisbane/Autemo Time</string>
    <string name="input_empty">Hey! Write a message!</string>
    <string name="refresh">Refresh</string>

    <string name="clipboard_post" translatable="false">%1$s - %2$s: %3$s</string>
    <string name="dialog_post_clipboard">Copy post to clipboard</string>
    <string name="dialog_post_share">Share post</string>
    <string name="dialog_post_user">Show %1$s\'s profile on autemo.com</string>
    <string name="dialog_copied">Copied to clipboard</string>
    <string name="share_title">Share using</string>

    <!-- List rows -->
    <string name="promotion">%s just got promoted!</string>
    <string name="award_author">%s just got a new chopping award:\u0020</string>
    <string name="competition_author">%s started a new competition:\u0020</string>
    <string name="global_announcement">~~ Global Announcement ~~</string>
    <string name="thread_author">New thread by %s:\u0020</string>
    <string name="time_just_now">just now</string>

    <!-- Image descriptions (alt text) -->
    <string name="alt_send">Send message</string>
    <string name="alt_addsmiley">Add smiley</string>

    <!-- Strings related to login -->
    <string name="app_title_login">Shoutemo - Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign">Sign in</string>
    <string name="login_dont_have_account_yet_question">Don\'t have an account yet?</string>
    <string name="login_head_to_autemo_com">Head over to &lt;a href="http://www.autemo.com/signup/?m=artist">autemo.com&lt;/a> and sign up!</string>
    <string name="login_progress_signing_in">Authenticating&#8230;</string>
    <string name="error_invalid_email_or_password">Email address or password is invalid.</string>
    <string name="error_field_required">This field is required.</string>

    <!-- About page -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_about">About</string>
    <string name="pref_clear_chat_history_dialog_title">Erase chat history?</string>
    <string name="pref_clear_chat_history_dialog_message">Pressing OK will erase the entire chat history from your device.</string>
    <string name="pref_clear_chat_history">Clear chat history</string>
    <string name="pref_clear_chat_history_deleted">%d messages deleted.</string>
    <string name="pref_about_about_summary">
        Version %1$s
        \n© 2013-%2$d Maximilian Salomon
    </string>
    <string name="pref_about_project_icons_title">Some icons by Mihaiciuc Bogdan</string>
    <string name="pref_about_project_icons_summary">from the set \'Project Icons\'</string>

    <!-- Message filters -->
    <string name="menu_filter_title">Filter messages</string>
    <string name="menu_filter_title_condensed">Filter</string>
    <string name="menu_filter_all">Show everything</string>
    <string name="menu_filter_shouts">Shouts</string>
    <string name="menu_filter_global">Global Announcements</string>
    <string name="menu_filter_competitions">Competitions</string>
    <string name="menu_filter_awards">Awards</string>
    <string name="menu_filter_promotions">Promotions</string>
    <string name="menu_filter_threads">New threads</string>

</resources>
