<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2013 Maximilian Salomon.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see http://www.gnu.org/licenses/.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_header_general">
        <de.msal.shoutemo.widgets.DeleteChatHistoryPreference
            android:dialogIcon="@drawable/ic_dialog_warning_white_24dp"
            android:dialogMessage="@string/pref_clear_chat_history_dialog_message"
            android:dialogTitle="@string/pref_clear_chat_history_dialog_title"
            android:persistent="false"
            android:selectable="true"
            android:title="@string/pref_clear_chat_history" />
    </PreferenceCategory>

    <PreferenceCategory
        android:persistent="false"
        android:title="@string/pref_header_about">
        <Preference
            android:key="about"
            android:selectable="false"
            android:icon="@drawable/ic_launcher"
            android:summary="@string/pref_about_about_summary"
            android:title="@string/app_name" />

        <Preference
            android:enabled="true"
            android:key="notices"
            android:selectable="true"
            android:title="@string/pref_about_project_icons_title"
            android:summary="@string/pref_about_project_icons_summary" />
    </PreferenceCategory>

</PreferenceScreen>