<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2013 Maximilian Salomon.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see http://www.gnu.org/licenses/.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_action_filter_list_white_24dp"
        android:orderInCategory="60"
        app:showAsAction="always"
        android:title="@string/menu_filter_title"
        android:titleCondensed="@string/menu_filter_title_condensed">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_filter_all"
                    android:checked="true"
                    android:icon="@drawable/ic_event_all"
                    android:title="@string/menu_filter_all" />
                <item
                    android:id="@+id/menu_filter_shouts"
                    android:icon="@drawable/ic_event_shout"
                    android:title="@string/menu_filter_shouts" />
                <item
                    android:id="@+id/menu_filter_global"
                    android:icon="@drawable/ic_event_global"
                    android:title="@string/menu_filter_global" />
                <item
                    android:id="@+id/menu_filter_competitions"
                    android:icon="@drawable/ic_event_competition"
                    android:title="@string/menu_filter_competitions" />
                <item
                    android:id="@+id/menu_filter_awards"
                    android:icon="@drawable/ic_event_award"
                    android:title="@string/menu_filter_awards" />
                <item
                    android:id="@+id/menu_filter_promotions"
                    android:icon="@drawable/ic_event_promotion"
                    android:title="@string/menu_filter_promotions" />
                <item
                    android:id="@+id/menu_filter_threads"
                    android:icon="@drawable/ic_event_thread"
                    android:title="@string/menu_filter_threads" />

            </group>
        </menu>
    </item>
</menu>
