<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2013 Maximilian Salomon.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see http://www.gnu.org/licenses/.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rl_input"
        android:layout_alignParentTop="true"
        android:stackFromBottom="true"
        android:transcriptMode="normal" />

    <RelativeLayout
        android:id="@+id/rl_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/autemo_shadow">

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/autemo_green_primary" />

        <ImageButton
            android:id="@+id/ib_smileys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/et_input"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/et_input"
            android:layout_centerInParent="true"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/alt_addsmiley"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:src="@drawable/ic_action_emo_basic" />

        <ImageButton
            android:id="@+id/ib_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/et_input"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/et_input"
            android:layout_centerInParent="true"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/alt_send"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:src="@drawable/ic_action_send" />

        <EditText
            android:id="@+id/et_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/ib_send"
            android:layout_toRightOf="@+id/ib_smileys"
            android:background="@null"
            android:hint="@string/input_empty"
            android:padding="@dimen/edittext_padding"
            android:textColorHint="@color/autemo_glow" />
    </RelativeLayout>

</RelativeLayout>
