<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2013 Maximilian Salomon.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see http://www.gnu.org/licenses/.
  -->

<LinearLayout
    android:id="@+id/chat_rl_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:stackFromBottom="true"
        android:transcriptMode="normal"
        android:fastScrollEnabled="true" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/autemo_green_primary" />

    <LinearLayout
        android:id="@+id/rl_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/autemo_trns_shadow"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ib_update_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/circle_accent"
            android:visibility="gone"
            android:layout_gravity="start|top"
            android:layout_marginRight="-9dp"
            android:layout_marginEnd="-9dp"
            android:padding="2dp" />

        <ImageButton
            android:id="@+id/ib_emoticons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/alt_addsmiley"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:src="@drawable/ic_action_emoticon" />

        <EditText
            android:id="@+id/et_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_empty"
            android:inputType="textMultiLine|textCapSentences"
            android:padding="@dimen/edittext_padding"
            android:textColorHint="@color/autemo_trns_glow" />

        <ImageButton
            android:id="@+id/ib_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/alt_send"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:src="@drawable/ic_action_send" />

    </LinearLayout>

    <include
        layout="@layout/emoticons_grid"
        android:id="@+id/emoticons_grid"
        android:layout_width="match_parent"
        android:layout_height="@dimen/keyboard_height"
        android:visibility="gone" />
</LinearLayout>
